@@ -7,7 +7,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.back.fortesupermercados.dtos.categories.CategoryOutput;
 import com.back.fortesupermercados.dtos.products.ProductOutput;
 import com.back.fortesupermercados.dtos.subcategories.SubcategoryInput;
 import com.back.fortesupermercados.dtos.subcategories.SubcategoryOutput;
@@ -16,7 +15,7 @@ import com.back.fortesupermercados.repositories.SubcategoryRepository;
 
 @Service
 public class SubcategoryService {
-    
+
     @Autowired
     SubcategoryRepository subcategoryRepository;
 
@@ -24,24 +23,24 @@ public class SubcategoryService {
     private ProductService productService;
 
     @Transactional
-    public SubcategoryOutput create(SubcategoryInput input){
+    public SubcategoryOutput create(SubcategoryInput input) {
         Subcategory subcategory = convertInputToSubcategory(input);
         subcategory = subcategoryRepository.save(subcategory);
-
         return convertSubcategoryToOutput(subcategory);
     }
 
-    public List<SubcategoryOutput> list(){
+    public List<SubcategoryOutput> list() {
         return subcategoryRepository
-        .findAll()
-        .stream()
-        .map(subcategory -> convertSubcategoryToOutput(subcategory))
-        .toList();
+                .findAll()
+                .stream()
+                .map(this::convertSubcategoryToOutput)
+                .collect(Collectors.toList());
     }
 
     public List<SubcategoryOutput> getSubcategoriesByCategoryId(Long categoryId) {
         List<Subcategory> subcategories = subcategoryRepository.findByCategoryId(categoryId);
-        return subcategories.stream()
+        return subcategories
+                .stream()
                 .map(this::convertSubcategoryToOutput)
                 .collect(Collectors.toList());
     }
@@ -51,41 +50,42 @@ public class SubcategoryService {
         return products;
     }
 
-    public SubcategoryOutput read(Long id){
-        Subcategory subcategory = subcategoryRepository.findById(id).orElse(null);
-        return convertSubcategoryToOutput(subcategory);
+    public SubcategoryOutput read(Long id) {
+        return subcategoryRepository.findById(id)
+                .map(this::convertSubcategoryToOutput)
+                .orElse(null);
     }
 
     @Transactional
-    public SubcategoryOutput update(Long id, SubcategoryInput input){
-        if(subcategoryRepository.existsById(id)){
-            Subcategory subcategory = convertInputToSubcategory(input);
-            subcategory.setId(id);
-            subcategory = subcategoryRepository.save(subcategory);
-            return convertSubcategoryToOutput(subcategory);
-        }else{
-            return null;
-        }
+    public SubcategoryOutput update(Long id, SubcategoryInput input) {
+        return subcategoryRepository.findById(id)
+                .map(existingSubcategory -> {
+                    Subcategory updatedSubcategory = convertInputToSubcategory(input);
+                    updatedSubcategory.setId(id);
+                    updatedSubcategory = subcategoryRepository.save(updatedSubcategory);
+                    return convertSubcategoryToOutput(updatedSubcategory);
+                })
+                .orElse(null);
     }
 
-    public void delete(Long id){
+    public void delete(Long id) {
         subcategoryRepository.deleteById(id);
     }
 
-    private SubcategoryOutput convertSubcategoryToOutput(Subcategory subcategory){
-        if(subcategory == null){
+    private SubcategoryOutput convertSubcategoryToOutput(Subcategory subcategory) {
+        if (subcategory == null) {
             return null;
         }
         SubcategoryOutput output = new SubcategoryOutput(
-            subcategory.getId(), 
-            subcategory.getName(),
-            subcategory.getParentCategory()
+                subcategory.getId(),
+                subcategory.getName(),
+                subcategory.getParentCategory()
         );
 
         return output;
     }
 
-    private Subcategory convertInputToSubcategory(SubcategoryInput input){
+    private Subcategory convertInputToSubcategory(SubcategoryInput input) {
         Subcategory subcategory = new Subcategory();
         subcategory.setName(input.name());
         subcategory.setParentCategory(input.category());
